--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
